# smoldot

./: .gitignore  Cargo.toml
.claude/commands/: smoldot-release.md
.github/: zombienet-env
.github/workflows/: ci.yml  deploy.yml  zombienet.yml
benchmarks/: Cargo.toml  README.md
benchmarks/js/: package-lock.json  package.json  save_db.js  startup.js
benchmarks/src/: lib.rs
docs/: DEV-PUBLISHING.md  RELEASING.md
e2e-tests/: Cargo.toml  README.md
e2e-tests/browser/: helpers.js  package-lock.json  package.json  statement_store_browser.js
e2e-tests/browser/page/: index.html
e2e-tests/chain-specs/: people-westend-local-spec.json
e2e-tests/docs/: smoke-scenarios.md
e2e-tests/js/: bulletin_fetch.js  helpers.js  package-lock.json  package.json  smoke.js  statement_store_peer_connection.js  statement_store_reception.js  statement_store_submission.js
e2e-tests/src/: bulletin.rs  lib.rs  network.rs  snapshot.rs  statement.rs
e2e-tests/tests/: bulletin_fetch.rs  bulletin_generate_snapshot.rs  smoke.rs  smoke_cold.rs  smoke_fresh.rs  smoke_generate_snapshots.rs  smoke_warm.rs  statement_store_browser.rs  statement_store_peer_connection.rs  statement_store_reception.rs  statement_store_submission.rs
full-node/: Cargo.toml  Dockerfile
full-node/src/: network_service.rs
full-node/tests/: json-rpc-general-requests.rs
lib/: Cargo.toml
lib/src/: libp2p.rs
lib/src/chain/: async_tree.rs
lib/src/json_rpc/: methods.rs
lib/src/libp2p/: cid.rs  collection.rs
light-base/: Cargo.toml
light-base/examples/: statement_test.rs  test_asset_hub.rs
light-base/src/: bitswap_service.rs  json_rpc_service.rs  lib.rs  network_service.rs  runtime_service.rs  sync_service.rs
wasm-node/: CHANGELOG.md
wasm-node/javascript/: package-lock.json  package.json  prepare.mjs
wasm-node/rust/: Cargo.toml
(+30 files in other folders)
