[package]
name = "smoldot-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "startup"
path = "src/bin/startup.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
smoldot-e2e-tests = { path = "../e2e-tests" }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "process", "time"] }
zombienet-sdk = "0.4"
